--- a/styles.css
+++ b/styles.css
@@ -5,30 +5,8 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #598659;
-    color: #fff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-
-footer {
-    background-color: #A3AFA3;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    width: 100%;
-    margin-top: 20px;
-}
-
 h1 {
-    font-size: 1.2em;
-    color: #598659;
+    color: #2c3e50;
     text-align: center;
     margin-top: 20px;
     font-size: 1.75em;
@@ -56,7 +34,7 @@ h4 {
 h5 {
     font-family: Arial, sans-serif;
     font-weight: bold;
-    color: #4a5c7a;
+    color: black;
     font-size: 22.5px;
 }
 
@@ -74,6 +52,34 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+img {
+    display: block;
+    margin: 50px auto;
+    max-width: 100%;
+    height: auto;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+footer {
+    background-color: #808080;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    width: 100%;
+    margin-top: 20px;
 }
 
 nav ul {
@@ -97,98 +103,40 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-main {
-    padding: 20px;
-}
-
-.book-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-}
-
-.book {
-    background: #fff;
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: center;
+button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    margin: 50px;
+    margin-top: 0px;
+    font-size: 16px;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.book-image {
-    width: 250px;
-    height: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-.carousel-container {
-    position: relative;
-    width: 100%;
-    height: 40vh;
-    overflow: hidden;
-    margin: 0 auto;
-}
-
-.carousel {
-    display: flex;
-    transition: transform 1s ease;
-    width: 100%;
-}
-
-.carousel-item {
-    flex: 0 0 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carousel-container:hover .carousel {
-    animation-play-state: paused;
-}
-
-.carousel-nav.left {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-    font-size: 30px;
-    color: rgb(0, 0, 0);
     cursor: pointer;
-    z-index: 10;
+    transition: background-color 0.3s;
+}
+  
+button:hover {
+    background-color: #3498db6f;
+}
+  
+button:focus {
+    outline: none;
+    box-shadow: 0 0 5px #93afc2;
 }
 
-.carousel-nav.right {
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    font-size: 30px;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-    z-index: 10;
+.zentriert {
+    text-align: center;
 }
 
+.zeilenabstand {
+    line-height: 1%;
+}
+
+.body2 {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 .dashboard {
     padding: 20px;
     display: flex;
@@ -214,4 +162,16 @@ a:hover {
 }
 .card p {
     margin-bottom: 10px;
+}
+
+.container {
+    display: flex;
+    gap: 20px;
+}
+
+.minipage {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
 }
